--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -644,25 +644,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-08-28 21:40:01,216 [DEBUG] GetUserInfo: \n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'convert_userinfo_response_to_df_format' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[16], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m user_info \u001b[38;5;241m=\u001b[39m api\u001b[38;5;241m.\u001b[39msendGetUserInfo(token_ub)\n\u001b[0;32m----> 2\u001b[0m uf_df \u001b[38;5;241m=\u001b[39m \u001b[43mconvert_userinfo_response_to_df_format\u001b[49m(user_info[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrows\u001b[39m\u001b[38;5;124m'\u001b[39m], \u001b[38;5;241m1\u001b[39m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'convert_userinfo_response_to_df_format' is not defined"
+      "2024-08-29 16:11:33,230 [DEBUG] GetUserInfo: \n"
      ]
     }
    ],
@@ -675,11 +664,110 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Tick                   1\n",
+       "StockID          UBIQ000\n",
+       "share_holding       -400\n",
+       "orders                24\n",
+       "error_orders           0\n",
+       "order_value       167209\n",
+       "trade_value        20194\n",
+       "target_volume     -12000\n",
+       "remain_volume     -11600\n",
+       "frozen_volume          0\n",
+       "Name: 0, dtype: object"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "uf_df[uf_df['StockID'] == \"UBIQ000\"].iloc[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-08-29 02:00:36,611 [DEBUG] GetGameInfo: \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'response_type': 'get_game_info_response',\n",
+       " 'next_game_start_time': 1724839075,\n",
+       " 'next_game_running_days': 80,\n",
+       " 'next_game_running_time': 360,\n",
+       " 'next_game_time_ratio': 10,\n",
+       " 'status': 'Success'}"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "api.sendGetGameInfo(token_ub)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
    "outputs": [],
    "source": [
     "lob_info = api.sendGetAllLimitOrderBooks(token_ub)\n",
     "lob_df = convert_LOB_response_to_df_format(lob_info['lobs'])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "BidPrice1     50.38\n",
+       "BidPrice2     50.35\n",
+       "BidPrice3     50.34\n",
+       "BidPrice4     50.33\n",
+       "BidPrice5     50.32\n",
+       "BidPrice6     50.31\n",
+       "BidPrice7      50.3\n",
+       "BidPrice8     50.29\n",
+       "BidPrice9     50.28\n",
+       "BidPrice10    50.27\n",
+       "Name: 0, dtype: object"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lob_df[lob_df['StockID'] == \"UBIQ000\"].iloc[0]['BidPrice1':'BidPrice10']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
